# RemoteCommand

./: .gitignore  LICENSE  README.md  pyproject.toml  remote_command.py
src/remote_command_server/: __init__.py  app.py  cli.py  client.py  client_cli.py  config.py  manager.py  models.py
tests/: test_app.py  test_client_cli.py  test_manager.py
