[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remote-command-server"
version = "0.1.0"
description = "Run local commands through an authenticated HTTP API with reconnectable streaming output."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Li Yuanhao" },
]
dependencies = [
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "pydantic>=2.9,<3",
    "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
]

[project.scripts]
remote-command-server = "remote_command_server.cli:main"
remote-command = "remote_command_server.client_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
